<resources>
    <string name="app_name">Bisimulation</string>
    <string name="login_textView">LOGIN</string>
    <string name="email_textView">Email address</string>
    <string name="password_textView">Password</string>
    <string name="rememberMe_checkBox">Remember me</string>
    <string name="login_button">Log in</string>
    <string name="forgotPw_textView">Forgot password?</string>
    <string name="clickHere_textView">Click here.</string>
    <string name="notRegisteres_textView">Not registered yet?</string>
    <string name="logginIn_Toast">Logging in..</string>
    <string name="signinUp_Toast">Signing up..</string>
    <string name="logInSuccessful_Toast">Log in successful!</string>
    <string name="logInFailed_Toast">Log in failed.</string>
    <string name="signUpSuccessful_Toast">Sign up successful!</string>
    <string name="signUpFailed_Toast">Sign up failed.</string>
    <string name="signUpUserCollisiom_Toast">A user with this email already exists.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signUp_textView">SIGN UP</string>
    <string name="insertYourName_textView">Insert your name</string>
    <string name="name_editText">Name</string>
    <string name="insertYourSurname_textView">Insert your surname</string>
    <string name="surname_editText">Surname</string>
    <string name="insertYourEmail_textView">Insert your email</string>
    <string name="insertYourUsername_textView">Insert your username</string>
    <string name="username_editText">Username</string>
    <string name="insertYourPassword_textView">Insert your password</string>
    <string name="confirmPassword_textView">Confirm your password</string>
    <string name="passwordSignUp_editText">Password</string>
    <string name="confirmPassword_editText">Your password again</string>
    <string name="signUp_button">Sign up!</string>

    <string name="invalidEmailError">Please insert a valid email address.</string>
    <string name="emptyPasswordError">Please insert a password.</string>
    <string name="invalidPasswordError">Password is invalid.</string>
    <string name="lengthPasswordError">Password must be at least 6 characters long.</string>
    <string name="invalidNameError">The name is invalid.</string>
    <string name="invalidSurnameError">The surname is invalid.</string>
    <string name="invalidUsernameError">The username is invalid.</string>
    <string name="pwNotMatchError">The password does not match.</string>
    <string name="forgotPwDialog_textView">Insert here the email address that you used during registration.</string>
    <string name="emailForgotPwDialog_editText">Email</string>
    <string name="resetForgotPwDialog_button">Reset</string>
    <string name="forgotPwDialogSuccess_Toast">Success! If your email is already registered, you should receive a message soon.</string>
    <string name="forgotPwDialogFail_Toast">Password reset failed.</string>
    <string name="personalStats_textView">Personal stats</string>
    <string name="discoverMore_button">Discover more!</string>
    <string name="victories_textView">Number of victories:</string>
    <string name="losses_textView">Number of losses:</string>
    <string name="activePlayer_textView">Active players</string>
    <string name="nActivePlayers_textView">Active players:</string>
    <string name="rooms_textView">Rooms:</string>
    <string name="activePlayers_button">Active players</string>
    <string name="playNow_button">Play now!</string>

    <string name="navigation_menu_title">Navigation</string>
    <string name="other_menu_title">Other</string>
    <string name="home_menu">Home</string>
    <string name="myProfile_menu">My profile</string>
    <string name="playNow_menu">Play now!</string>
    <string name="faq_menu">FAQ</string>
    <string name="settings_menu">Settings</string>
    <string name="report_menu">Report a problem</string>
    <string name="personalInfoTextView">Personal info:</string>
    <string name="nameTextView">Name:</string>
    <string name="surnameTextView">Surname:</string>
    <string name="emailAddressTextView">Email address:</string>
    <string name="statsTextView">Statistics:</string>

    <!-- FAQ -->
    <string name="faq">FAQ</string>
    <string name="faq_toggle_question">Open / Close</string>
    <string name="faq_question_one">What is <b>bisimulation</b>?</string>
    <string name="faq_answer_one">In theoretical computer science a <b>bisimulation</b> is a binary relation between state transition systems, associating systems that behave in the same way in that one system simulates the other and vice versa.</string>
    <string name="faq_question_two">When two systems can be considered <b>bisimilar</b>?</string>
    <string name="faq_answer_two">Two system are <b>bisimilar</b> if they, assuming we view them as a playing <i>game</i> according to some rules, match each other\'s moves. In this sense, each of the systems cannot be distinguished from the other by an observer.</string>
    <string name="faq_question_three">Where are my <b>data</b> stored?</string>
    <string name="faq_answer_three">Data are stored in <b>Firebase</b>, a service offered by <i>Google</i>, where data are <b><i>encrypted</i></b>.</string>
    <string name="faq_question_four">How many <b>game tables</b> are available at the moment?</string>
    <string name="faq_answer_four">At the moment only one game table is available. Soon other tables will be ready.</string>
    <string name="faqGroup_contentDescription">Expand or collapse this question.</string>

    <!-- Bug report -->
    <string name="sendBugReport_textView">Send us a message of what went wrong, we\'ll try to reach out to you as soon as possible!</string>
    <string name="thanksFeedback_textView">Thank you for your feedback!\nThe message will be sent to test@mail.com</string>
    <string name="bugReport_hint">Insert here what went wrong with the application.</string>
    <string name="sendEmail_button">Send</string>
    <string name="selectEmail_chooser">Select your email app:</string>

    <string name="shareDialogTitle">Share this app</string>
    <string name="shareDialogMessage">Tell all your friends that you are playing the bisimulation game!</string>
    <string name="shareDialogPositiveButton">Share!</string>
    <string name="shareDialogNegativeButton">Dismiss</string>
    <string name="shareMessage">I\'m playing the Bisimulation game! Isn\'t that amazing?</string>
    <string name="createRoom_button">Create room!</string>
    <string name="roomCreatedBy_textView">Room by:</string>
    <string name="joinRoom_button">Join room!</string>
    <string name="startGame_button">Start game!</string>

    <!-- Lobby -->
    <string name="lobbyCreationError">Impossible to create a lobby.</string>
    <string name="lobbyZombieError">The host left the lobby</string>
    <string name="lobbyInactiveError">This room has been reported as inactive</string>
    <string name="lobbyWaitingToStart">Waiting for the host to start the game…</string>
    <string name="lobbyWaitingForPlayer2">Waiting…</string>
    <string name="zombiefy_button">Report this room as empty</string>
    <string name="attacker_switch">Attacker</string>
    <string name="stayStill_button">Still!</string>
    <string name="sc_textView">Special colour:</string>
    <string name="lm_textView">Last move:</string>

    <!-- Game -->
    <string name="yourTurn_textView">Your turn!</string>
    <string name="notYourTurn_textView">Not your turn..</string>
    <string name="victoryText">Vitcory!</string>
    <string name="defeatText">Defeat.</string>
</resources>