<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotPwDialog_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgotPwDialog_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailForgotPwDialog_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/emailForgotPwDialog_editText"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/forgotPwDialog_textView"
        app:layout_constraintStart_toStartOf="@+id/forgotPwDialog_textView"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwDialog_textView"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/resetForgotPwDialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resetForgotPwDialog_button"
        app:layout_constraintEnd_toEndOf="@+id/emailForgotPwDialog_editText"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotPwDialog_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>